Smaller mean dots, lighter opacity for cartesian grid, background color cutoff bug fix

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
 
 body {
   margin: 0;
+  background-color: #2E3047;
 }
 
 h1 {
